force-app/main/default/objects/K_Processed_Contact__c/K_Processed_Contact__c.object-meta.xml
<CustomObject>
    <description>This object includes the processed contact records(i.e. updated contacts).</description>
    <label>Processed Contact</label>
    <nameField>
        <displayFormat>KPC-{0000}</displayFormat>
        <label>KPC_ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Processed Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>