force-app/main/default/objects/K_Processed_Contact__c/fields/Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Action_Date__c</fullName>
    <label>Action Date</label>
    <type>Date</type>
</CustomField>