force-app/main/default/objects/K_Processed_Contact__c/fields/Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Action_Taken__c</fullName>
    <label>Action Taken</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Action Taken</fullName>
                <default>true</default>
                <label>No Action Taken</label>
            </value>
            <value>
                <fullName>Create Contact</fullName>
            </value>
            <value>
                <fullName>Create Lead</fullName>
            </value>
            <value>
                <fullName>Promoted</fullName>
            </value>
            <value>
                <fullName>Skip</fullName>
            </value>
            <value>
                <fullName>Left</fullName>
            </value>
            <value>
                <fullName>Merge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>