force-app/main/default/objects/K_Processed_Contact__c/fields/Action_Taken_By__c.field-meta.xml
<CustomField>
    <fullName>Action_Taken_By__c</fullName>
    <label>Action Taken By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>