force-app/main/default/objects/K_Processed_Contact__c/fields/Agree_to_update__c.field-meta.xml
<CustomField>
    <fullName>Agree_to_update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I agree to take action on Contact</label>
    <type>Checkbox</type>
</CustomField>