force-app/main/default/objects/K_Processed_Contact__c/fields/Change_Status__c.field-meta.xml
<CustomField>
    <fullName>Change_Status__c</fullName>
    <formula>IF(
  ISPICKVAL(Contact_Status__c, &quot;Joined&quot;),
&quot;🟦&quot;,
IF(
ISPICKVAL(Contact_Status__c, &quot;Left&quot;),
&quot;🟨&quot;,
IF(
ISPICKVAL(Contact_Status__c, &quot;Promoted&quot;),
&quot;🟩&quot;,

NULL
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Change Status</label>
    <type>Text</type>
</CustomField>