force-app/main/default/objects/K_Processed_Contact__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <inlineHelpText>Previous company of the contact received from Kanlet.</inlineHelpText>
    <label>Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>