force-app/main/default/objects/K_Processed_Contact__c/fields/Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status__c</fullName>
    <inlineHelpText>Indicates the current status of the contact.</inlineHelpText>
    <label>Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Joined</fullName>
            </value>
            <value>
                <fullName>Promoted</fullName>
            </value>
            <value>
                <fullName>Left</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>