force-app/main/default/objects/K_Processed_Contact__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <label>ContactId</label>
    <length>200</length>
    <type>Text</type>
</CustomField>