force-app/main/default/objects/K_Processed_Contact__c/fields/Created_in_Last_90_Days__c.field-meta.xml
<CustomField>
    <fullName>Created_in_Last_90_Days__c</fullName>
    <formula>TODAY() - DATEVALUE(CreatedDate) &lt;= 90</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created in Last 90 Days</label>
    <type>Checkbox</type>
</CustomField>