force-app/main/default/objects/K_Processed_Contact__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <inlineHelpText>Previous Designation of the contact received from Kanlet.</inlineHelpText>
    <label>Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>