force-app/main/default/objects/K_Processed_Contact__c/fields/K_Contact__c.field-meta.xml
<CustomField>
    <fullName>K_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>K Contact</label>
    <referenceTo>K_Contact__c</referenceTo>
    <relationshipLabel>K Processed Contacts</relationshipLabel>
    <relationshipName>K_Processed_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>