force-app/main/default/objects/K_Processed_Contact__c/fields/New_Company__c.field-meta.xml
<CustomField>
    <fullName>New_Company__c</fullName>
    <inlineHelpText>New company of the contact received from Kanlet.</inlineHelpText>
    <label>New Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>