force-app/main/default/objects/K_Processed_Contact__c/fields/New_Company_Website__c.field-meta.xml
<CustomField>
    <fullName>New_Company_Website__c</fullName>
    <label>New Company Website</label>
    <length>255</length>
    <type>Text</type>
</CustomField>