force-app/main/default/objects/K_Processed_Contact__c/fields/New_Designation__c.field-meta.xml
<CustomField>
    <fullName>New_Designation__c</fullName>
    <inlineHelpText>New Designation of the contact received from Kanlet.</inlineHelpText>
    <label>New Designation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>