force-app/main/default/objects/K_Processed_Contact__c/fields/New_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>New_Email_Id__c</fullName>
    <inlineHelpText>New Email Id of the contact received from Kanlet</inlineHelpText>
    <label>New Email Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>