force-app/main/default/objects/K_Processed_Contact__c/fields/Recommended_Action__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Action__c</fullName>
    <label>Recommended Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Create Lead</fullName>
            </value>
            <value>
                <fullName>Create Contact</fullName>
            </value>
            <value>
                <fullName>Merge</fullName>
            </value>
            <value>
                <fullName>Promote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>