force-app/main/default/objects/K_Processed_Contact__c/fields/Skip_Contact__c.field-meta.xml
<CustomField>
    <fullName>Skip_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used the functionality of skip on Processed contact</description>
    <label>Skip Contact</label>
    <type>Checkbox</type>
</CustomField>