force-app/main/default/objects/K_Processed_Contact__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>New company joined date of the contact.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>