force-app/main/default/objects/K_Processed_Contact__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>