force-app/main/default/objects/K_Processed_Contact__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Company__c</columns>
    <columns>Job_Title__c</columns>
    <columns>Contact_Status__c</columns>
    <columns>New_Company__c</columns>
    <columns>New_Designation__c</columns>
    <columns>Action_Taken__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>