force-app/main/default/objects/K_Processed_Contact__c/listViews/Create_Contact.listView-meta.xml
<ListView>
    <fullName>Create_Contact</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Contact_Status__c</columns>
    <columns>Company__c</columns>
    <columns>Job_Title__c</columns>
    <columns>New_Company__c</columns>
    <columns>New_Designation__c</columns>
    <columns>Action_Taken__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Action_Taken__c</field>
        <operation>equals</operation>
        <value>Create Lead</value>
    </filters>
    <label>Create Lead</label>
</ListView>