force-app/main/default/objects/K_Processed_Contact__c/listViews/Merge_Contacts.listView-meta.xml
<ListView>
    <fullName>Merge_Contacts</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Company__c</columns>
    <columns>Job_Title__c</columns>
    <columns>New_Company__c</columns>
    <columns>New_Designation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Recommended_Action__c</field>
        <operation>equals</operation>
        <value>Merge</value>
    </filters>
    <label>Merge Contacts</label>
</ListView>