force-app/main/default/objects/K_Processed_Contact__c/listViews/Processed_Contacts_Past_90_Days.listView-meta.xml
<ListView>
    <fullName>Processed_Contacts_Past_90_Days</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Processed Contacts Past 90 Days</label>
</ListView>