force-app/main/default/objects/K_Processed_Contact__c/listViews/Update_Contacts.listView-meta.xml
<ListView>
    <fullName>Update_Contacts</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Contact_Status__c</columns>
    <columns>New_Company__c</columns>
    <columns>New_Designation__c</columns>
    <columns>Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Recommended_Action__c</field>
        <operation>equals</operation>
        <value>Update</value>
    </filters>
    <label>Update Contacts</label>
</ListView>